--- a/lib/cfn/stack.yml
+++ b/lib/cfn/stack.yml
@@ -47,9 +47,9 @@ Resources:
     Condition: CreateElbIsTrue
     Properties:
       Scheme: <%= network[:elb][:scheme] || "internet-facing" %> # or internal
-      Subnets: !Ref Subnets
-      # Add additional extra security groups if parameters set
+      Type: <%= @elb_type %>
 <% if @elb_type == "application" -%>
+      # Add additional extra security groups if parameters set
       SecurityGroups: !Split
         - ','
         - !If
@@ -57,7 +57,15 @@ Resources:
           - !Ref ElbSecurityGroup
           - !Join [',', [!Ref ElbSecurityGroups, !Ref ElbSecurityGroup]]
 <% end -%>
-      Type: <%= @elb_type %>
+<% if @elb_type == "network" && @subnet_mappings && !@subnet_mappings.empty? -%>
+      SubnetMappings:
+<% @subnet_mappings.each do |allocation_id, subnet_id| -%>
+        - AllocationId: <%= allocation_id %>
+          SubnetId: <%= subnet_id %>
+<% end -%>
+<% else -%>
+      Subnets: !Ref Subnets
+<% end -%>
       Tags:
       - Key: Name
         Value: <%= @pretty_service_name %>
