--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,7 +2,7 @@
 title: Ufo
 email: tongueroo@gmail.com
 url: http://ufoships.com
-description: "Easy Way to Build and Ship Docker Images to AWS ECS"
+description: "Easy Way to Build and Deploy Docker Images to AWS ECS"
 keywords: "AWS EC2 Container Service, AWS ECS, UFO, Deploy to ECS, ufo ship"
 skills: ""
 meta_author: Tung Nguyen
