--- a/lib/cfn/stack.yml
+++ b/lib/cfn/stack.yml
@@ -81,10 +81,10 @@ Resources:
     Condition: CreateTargetGroupIsTrue
     Properties:
       VpcId: !Ref Vpc
+<% if ENV['UFO_FORCE_TARGET_GROUP'] -%>
 # When adding and removing EIPs
 # Error: TargetGroup cannot be associated with more than one load balancer
 # Solution: https://forums.aws.amazon.com/thread.jspa?threadID=254544
-<% if ENV['UFO_FORCE_TARGET_GROUP'] -%>
       Name: !Join
       - '-'
       - - <%= @pretty_service_name %>
@@ -228,7 +228,7 @@ Resources:
 <%= custom_properties(:EcsCrossSecurityGroupRule) %>
 <% end -%>
 
-<% if @create_elb && network[:dns] && network[:dns][:name] -%>
+<% if @create_route53 -%>
   Dns:
     Type: AWS::Route53::RecordSet
     Properties:
@@ -241,7 +241,12 @@ Resources:
 <% end -%>
 
 Outputs:
-  Dns:
+  ElbDns:
     Description: Elb Dns
     Condition: CreateElbIsTrue
     Value: !GetAtt Elb.DNSName
+<% if @create_route53 -%>
+  Route53Dns:
+    Description: Route53 Dns
+    Value: !Ref Dns
+<% end -%>
