--- a/lib/cfn/stack.yml
+++ b/lib/cfn/stack.yml
@@ -81,6 +81,9 @@ Resources:
     Condition: CreateTargetGroupIsTrue
     Properties:
       VpcId: !Ref Vpc
+      Tags:
+      - Key: Name
+        Value: <%= @pretty_service_name %>
 <% if ENV['UFO_FORCE_TARGET_GROUP'] -%>
 # When adding and removing EIPs
 # Error: TargetGroup cannot be associated with more than one load balancer
