improve docs html title

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Ufo
+title: UFO ECS Deployment Tool
 email: tongueroo@gmail.com
 url: http://ufoships.com
 description: "AWS ECS Deployment Tool"
