--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: UFO ECS Deployment Tool
+title: UFO ECS Deploy Tool
 email: tongueroo@gmail.com
 url: http://ufoships.com
-description: "AWS ECS Deployment Tool"
+description: "AWS ECS Deploy Tool"
 keywords: "AWS EC2 Container Service, AWS ECS, UFO, Deploy to ECS, ufo ship"
 skills: ""
 meta_author: Tung Nguyen
@@ -26,11 +26,11 @@ disqus_shortname:
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: 3972c7
+  primary: FFF
   primary-rgb: "24,288,156" #"128,179,255"
   secondary: 2c3e50 #FD6E8A
   secondary-dark: 233140 #A2122F
-  links: a3c8ff
+  links: 0275d8
 
 # Footer settings
 footer:
